- Changed height of main to fix cut off of the login page - Configured viteconfig for correct react routing

--- a/ReactDatabase/src/index.css
+++ b/ReactDatabase/src/index.css
@@ -410,7 +410,7 @@
 
    /* !! Main Tags For (Welcome & Login Pages) */
    main {
-    height: 100vh;
+    height: auto;
    }
 
    
