--- a/ReactDatabase/src/pages/Login.css
+++ b/ReactDatabase/src/pages/Login.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  
 }
 
 .MainLC2 {
@@ -133,7 +133,6 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    overflow: hidden;
     gap: 3rem;
   }
 
@@ -162,7 +161,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    overflow: hidden;
+
     gap: 8rem;
   }
 
